Add user data to /auth/login response
