# docs/swagger.json
@@ -38,7 +38,10 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Sets access and refresh cookies"
+                        "description": "Sets new access and refresh cookies",
+                        "schema": {
+                            "$ref": "#/definitions/web.UserResponse"
+                        }
                     },
                     "400": {
                         "description": "Bad Request",
